Added master class of GNS

--- a/GPS/GPSNMEA/GPSNMEA.csproj
+++ b/GPS/GPSNMEA/GPSNMEA.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GnsDevice.cs" />
     <Compile Include="IMultiPartMessage.cs" />
     <Compile Include="NmeaDevice.cs" />
     <Compile Include="NmeaMessage.cs" />
